[package]
name = "cf-pages-cli"
version = "0.1.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "A simple command line utility for managing Cloudflare Pages projects"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive", "env"] }
reqwest = { version = "0.11.16", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
