[package]
name = "cf-pages-cli"
version = "0.2.1"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/cf-pages-cli"
description = "A simple command line utility for managing Cloudflare Pages projects"
keywords = ["cloudflare", "cloudflare-pages"]

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive", "env"] }
reqwest = { version = "0.11.16", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[[bin]]
name = "cf-pages"
path = "src/main.rs"
